fix: resolved issue where abbr-element was hidden behind codeed text.

--- a/frontend/sass/utils/_article.sass
+++ b/frontend/sass/utils/_article.sass
@@ -25,9 +25,11 @@ article
 
     .article-content, .blog-header, .ingress-header
         code
-            padding: 0.2em 0.4em
+            z-index: -1
             border-radius: 4px
             color: color.$white
+            position: relative
+            padding: 0.2em 0.4em
             background-color: color.$dark-grey
             font-family: 'Courier New', Courier, monospace
 
@@ -54,7 +56,7 @@ article
                     text-decoration: none
             padding: 0
 
-    .article-content, .bio-content
+    .article-content, .bio-content, .ingress-content
         h1,h2,h3,h4,h5,h6
             a
                 cursor: text
@@ -64,8 +66,11 @@ article
             text-align: left
         
         abbr
-            cursor: help
-            border-bottom: 1px dotted rgb(255, 69, 0)
+            z-index: 1
+            cursor: help            
+            position: relative
+            text-decoration: none !important
+            border-bottom: 1px dotted rgb(255, 69, 0)!important
             
 
     @include mix.text-wrap-safe()
